--- a/app/src/main/res/drawable/rounded_border.xml
+++ b/app/src/main/res/drawable/rounded_border.xml
@@ -3,17 +3,15 @@
     <solid android:color="@android:color/transparent"/>
 
     <stroke android:width="2dp"
-        android:color="@color/white"
-        />
+        android:color="@color/white" />
 
     <padding android:left="1dp"
         android:top="1dp"
         android:right="1dp"
-        android:bottom="1dp"
-        />
+        android:bottom="1dp" />
 
     <corners android:bottomRightRadius="3dp"
         android:bottomLeftRadius="3dp"
         android:topLeftRadius="3dp"
-        android:topRightRadius="3dp"/>
+        android:topRightRadius="3dp" />
 </shape>
