--- a/app/src/main/res/drawable/circle_border.xml
+++ b/app/src/main/res/drawable/circle_border.xml
@@ -7,6 +7,6 @@
     <solid android:color="@android:color/transparent" />
 
     <stroke
-        android:width="2dp"
+        android:width="@dimen/zoom_circle_border_width"
         android:color="@color/white" />
 </shape>
