--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -26,38 +26,38 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_alignParentLeft="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginTop="5dp"
+            android:layout_marginLeft="@dimen/margin_small"
+            android:layout_marginTop="@dimen/margin_xsmall"
             android:spinnerMode="dropdown"
             android:popupBackground="@android:color/transparent"
             android:background="@android:color/transparent"
-            android:dropDownVerticalOffset="80dp"/>
+            android:dropDownVerticalOffset="@dimen/sp_ratio_vertical_offset"/>
 
         <LinearLayout
-            android:layout_width="33dp"
-            android:layout_height="33dp"
+            android:layout_width="@dimen/scale_ring_diameter"
+            android:layout_height="@dimen/scale_ring_diameter"
             android:background="@drawable/circle_border"
             android:layout_centerInParent="true"
-            android:layout_marginTop="20dp"
+            android:layout_marginTop="@dimen/margin_large"
             android:gravity="center">
 
             <TextView
                 android:id="@+id/tvScale"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="9sp"
+                android:textSize="@dimen/scale_text_size"
                 android:textColor="@color/white"
                 android:text="1 x"/>
 
         </LinearLayout>
 
         <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="@dimen/small_icons_size"
+            android:layout_height="@dimen/small_icons_size"
             android:src="@drawable/camera_flash_off"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
-            android:layout_marginRight="10dp"/>
+            android:layout_marginRight="@dimen/margin_small"/>
 
     </RelativeLayout>
 
@@ -67,50 +67,50 @@
         android:orientation="vertical"
         android:layout_below="@+id/rlTop"
         android:layout_alignParentRight="true"
-        android:layout_marginRight="10dp"
-        android:layout_marginTop="-7dp">
+        android:layout_marginRight="@dimen/margin_small"
+        android:layout_marginTop="@dimen/utils_top_margin">
 
         <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="@dimen/small_icons_size"
+            android:layout_height="@dimen/small_icons_size"
             android:src="@drawable/camera_filter_off"
-            android:layout_marginBottom="12dp"/>
+            android:layout_marginBottom="@dimen/small_icon_margin"/>
 
         <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="@dimen/small_icons_size"
+            android:layout_height="@dimen/small_icons_size"
             android:src="@drawable/camera_lightleaks_off"
-            android:layout_marginBottom="12dp"/>
+            android:layout_marginBottom="@dimen/small_icon_margin"/>
 
         <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="@dimen/small_icons_size"
+            android:layout_height="@dimen/small_icons_size"
             android:src="@drawable/camera_dust_on"
-            android:layout_marginBottom="12dp"/>
+            android:layout_marginBottom="@dimen/small_icon_margin"/>
 
         <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="@dimen/small_icons_size"
+            android:layout_height="@dimen/small_icons_size"
             android:src="@drawable/datestamp_white"
-            android:layout_marginBottom="12dp"/>
+            android:layout_marginBottom="@dimen/small_icon_margin"/>
 
         <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="@dimen/small_icons_size"
+            android:layout_height="@dimen/small_icons_size"
             android:src="@drawable/camera_timer_0"
-            android:layout_marginBottom="12dp"/>
+            android:layout_marginBottom="@dimen/small_icon_margin"/>
 
         <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="@dimen/small_icons_size"
+            android:layout_height="@dimen/small_icons_size"
             android:src="@drawable/camera_grid_off"
-            android:layout_marginBottom="12dp"/>
+            android:layout_marginBottom="@dimen/small_icon_margin"/>
 
         <ImageView
-            android:layout_width="35dp"
-            android:layout_height="35dp"
+            android:layout_width="@dimen/small_icons_size"
+            android:layout_height="@dimen/small_icons_size"
             android:src="@drawable/camera_more_hide"
-            android:layout_marginBottom="12dp"/>
+            android:layout_marginBottom="@dimen/small_icon_margin"/>
     </LinearLayout>
 
     <LinearLayout
@@ -124,26 +124,26 @@
             android:layout_height="wrap_content">
 
             <ImageView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
+                android:layout_width="@dimen/photos_size"
+                android:layout_height="@dimen/photos_size"
                 android:src="@drawable/img"
                 android:layout_centerVertical="true"
                 android:layout_alignParentLeft="true"
-                android:layout_marginLeft="25dp"/>
+                android:layout_marginLeft="@dimen/margin_xlarge"/>
 
             <ImageView
-                android:layout_width="80dp"
-                android:layout_height="80dp"
+                android:layout_width="@dimen/shutter_size"
+                android:layout_height="@dimen/shutter_size"
                 android:src="@drawable/shutter"
                 android:layout_centerInParent="true"/>
 
             <ImageView
-                android:layout_width="35dp"
-                android:layout_height="35dp"
+                android:layout_width="@dimen/rotate_camera_size"
+                android:layout_height="@dimen/rotate_camera_size"
                 android:src="@drawable/rotate_camera_white"
                 android:layout_centerVertical="true"
                 android:layout_alignParentRight="true"
-                android:layout_marginRight="25dp"/>
+                android:layout_marginRight="@dimen/margin_xlarge"/>
         </RelativeLayout>
 
         <LinearLayout
@@ -156,20 +156,20 @@
                 android:id="@+id/tvPhoto"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
+                android:textSize="@dimen/mode_text_size"
                 android:text="@string/photo"
                 android:textColor="@color/text_selector_color"
-                android:layout_margin="15dp"
+                android:layout_margin="@dimen/margin_normal"
                 android:textAllCaps="true"/>
 
             <TextView
                 android:id="@+id/tvVideo"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:textSize="16sp"
+                android:textSize="@dimen/mode_text_size"
                 android:text="@string/video"
                 android:textColor="@color/white"
-                android:layout_margin="15dp"
+                android:layout_margin="@dimen/margin_normal"
                 android:textAllCaps="true"/>
 
         </LinearLayout>
