--- a/app/src/main/res/layout/ratio_main.xml
+++ b/app/src/main/res/layout/ratio_main.xml
@@ -5,8 +5,8 @@
     android:layout_height="match_parent"
     android:gravity="center">
     <LinearLayout
-        android:layout_width="45dp"
-        android:layout_height="80dp"
+        android:layout_width="@dimen/sp_ratio_width"
+        android:layout_height="@dimen/sp_ratio_height"
         android:gravity="center">
         <LinearLayout
             android:id="@+id/llMain"
@@ -20,7 +20,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textColor="@color/white"
-                android:textSize="12sp"/>
+                android:textSize="@dimen/ratio_drop_down_text_size"/>
 
         </LinearLayout>
     </LinearLayout>
